fixed search button to appear on same line on iphone and ipad

--- a/public/css/search.less
+++ b/public/css/search.less
@@ -144,12 +144,14 @@ span.icon-caret-down {
     and (max-width: 640px){
     float:right;
     font-size:1em;
+    padding:0px;
     }
     @media only screen 
     and (min-width: 768px) 
     and (max-width: 1024px){
     float:right;
     font-size:1em;
+    padding:0px;
     }
   }
   .search-filter {
@@ -219,6 +221,7 @@ span.icon-caret-down {
     and (min-width: 768px)
     and (max-width: 1024px){
     text-align:left;
+    width:600px;
     
     }
   }
